Small design improvements, fixed arabic lines overflowing the box

--- a/style.css
+++ b/style.css
@@ -51,18 +51,21 @@ body { padding:10px; font-family:Arial,sans-serif; color:#444;}
 
 h2 {font-size:18px; font-weight:bold; }
 
-h1, h2, p { margin:10px 0; }
+h1, h2, p, .label-p { margin:10px 0; }
 
-p { line-height:1.2; }
+p, .label-p { line-height:1.2; }
 
-textarea { border-color:#888; color:#444;}
-#source-text { width:100%; max-width:100%; text-align:center; font-size:24px;}
+textarea { border-color:#AAA; color:#444;}
+#source-text { width:100%; max-width:100%; text-align:center; font-size:18px;}
 
-#result { border:1px solid #888;
+#result { border:1px solid #AAA;
 	  padding:10px;
-	  font-size:32px;
+	  font-size:24px;
 	  direction:rtl;
 	  text-align:center;
+	  white-space:pre-wrap;
 	}
 
 .btn { padding:5px 10px; border:1px solid #888; display:inline-block;}
+
+.label-p { display:block; }
